[package]
name = "cerbero-lib"
description = "Kerberos protocol attacker library"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/NukingDragons/cerbero-lib"
readme = "README.md"

[package.metadata.docs.rs]
targets = [ "x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu" ]

[dependencies]
kerbeiros = "0.2"
kerberos_asn1 = "0.2"
kerberos_constants = "0.0"
kerberos_crypto = "0.3"
kerberos_ccache = "0.0"
kerberos_keytab = "0.0"
ms_pac = "0.0"
ms_dtyp = "0.0"
ms_samr = "0.0"
chrono = "0.4"
rand = "0.6"
trust-dns-resolver = "0.20"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57.0", features = [ "Win32_Security_Authentication_Identity", "Win32_System_WindowsProgramming", "Win32_Security_Credentials" ] }
windows-core = "0.57.0"
