[package]
name = "cerbero-lib"
description = "Kerberos protocol attacker library"
version = "0.1.3"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/NukingDragons/cerbero-lib"
readme = "README.md"

[package.metadata.docs.rs]
targets = [ "x86_64-pc-windows-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu" ]

[dependencies]
kerbeiros = { package = "himmelblau_kerbeiros", version = "0.4.1" }
kerberos_asn1 = { package = "himmelblau_kerberos_asn1", version = "0.4.1" }
kerberos_constants = { package = "himmelblau_kerberos_constants", version = "0.4.1" }
kerberos_crypto = { package = "himmelblau_kerberos_crypto", version = "0.4.1" }
kerberos_ccache = { package = "himmelblau_kerberos_ccache", version = "0.4.1" }
kerberos_keytab = { package = "himmelblau_kerberos_keytab", version = "0.4.1" }
ms_pac = "0.0"
ms_dtyp = "0.0"
ms_samr = "0.0"
chrono = "0.4"
rand = "0.6"
trust-dns-resolver = "0.20"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57.0", features = [ "Win32_Security_Authentication_Identity", "Win32_System_WindowsProgramming", "Win32_Security_Credentials" ] }
windows-core = "0.57.0"
